# schema_org_types_rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: msrv-check.yml  semver-check.yml  up-to-date-check.yml
generator/: Cargo.toml
generator/src/: deprecated_attribute.rs  doc_lines.rs  feature.rs  feature_gate.rs  main.rs  read.rs  schema.rs  schema_feature.rs  schema_section.rs  serde_attributes.rs  sparql.rs  write.rs
generator/src/read/: patches.rs
generator/src/schema/: class.rs  data_type.rs  enumeration.rs  property.rs
generator/src/schema/class/: serde.rs
generator/src/schema/data_type/: rust_type.rs  serde.rs
generator/src/schema/enumeration/: enumeration_variant.rs  serde.rs
generator/src/schema/property/: serde.rs
generator/src/sparql/: as_literal.rs  as_named_node.rs  into_solutions.rs  node_type.rs
src/: date_types.rs  fallible.rs  lib.rs  number_types.rs  schemas.rs  tests.rs
src/date_types/: serde.rs
src/number_types/: serde.rs
src/schemas/: classes.rs  data_types.rs  enumerations.rs  properties.rs
src/schemas/classes/: about_page.rs  accept_action.rs  accommodation.rs  accounting_service.rs  achieve_action.rs  action.rs  action_access_specification.rs  activate_action.rs  add_action.rs  administrative_area.rs  adult_entertainment.rs  advertiser_content_article.rs  aggregate_offer.rs  aggregate_rating.rs  agree_action.rs  airline.rs  airport.rs  alignment_object.rs  allocate_action.rs  am_radio_channel.rs  amp_story.rs  amusement_park.rs  analysis_news_article.rs  anatomical_structure.rs  anatomical_system.rs  animal_shelter.rs  answer.rs  apartment.rs  apartment_complex.rs  api_reference.rs  append_action.rs  apply_action.rs  approved_indication.rs  aquarium.rs  archive_component.rs  archive_organization.rs  arrive_action.rs  art_gallery.rs  artery.rs  article.rs  (+768 more)
src/schemas/data_types/: boolean.rs  date.rs  (+10 more)
(+1552 files in other folders)
