[package]
name = "schema_org_types"
description = "Schema.org schemas as Rust types"
version = "0.2.3"
edition = "2021"
rust-version = "1.60"
license = "MIT"
repository = "https://github.com/Toromyx/schema_org_types_rs"
exclude = [
    ".github",
    "rustfmt.toml",
]

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
features = [
    "doc",
]

[dependencies.json-number]
version = "^0.4.6"

[dependencies.serde]
version = "^1.0.184"
optional = true
features = ["derive"]

[dependencies.serde_with]
version = "^3.3.0"
optional = true

[dependencies.speedate]
version = "^0.12.0"

[dependencies.url]
version = "^2.4"

[dev-dependencies.pretty_assertions]
version = "^1.4"

[dev-dependencies.serde_json]
version = "^1.0.107"

[features]
default = []
derive-all = [
    "derive-debug",
    "derive-clone",
]
derive-debug = []
derive-clone = []
fallible = []
serde = [
    "dep:serde",
    "dep:serde_with",
    "json-number/serde",
    "url/serde",
]
doc = []
test = [
    "fallible",
    "serde",
]
